add github page e remove id

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en-US"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en-US"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html lang="en">
+<html lang="pt_BR">
     <head>
         <!-- TITLE OF SITE -->
         <title> 8PHP | 8º Fórum de profissionais PHP do Estado do Maranhão</title>
 
         <meta charset="utf-8">
-        <meta name="description" content="Responsive Event Landing Page for Presenting Your Mobile App Which is Designed Based on Twitter Bootstrap 3.2" />
-        <meta name="keywords" content="eventer, parallax, one page, responsive, app landing, html template, mobile application" />
+        <meta name="description" content="Oitavo Fórum de profissionais php do estado do maranhão" />
+        <meta name="keywords" content="event, parallax, one page, php7, phpmaranhao, phpma" />
         <meta name="author" content="Santush Deb Nath, deviserweb">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -122,7 +122,7 @@
                     <div class="row header-body" id="header-body">
 
                         <!-- Start: CountDown area -->
-                        <div class="count_down wow fadeInDown animated" data-wow-offset="120" data-wow-duration="1.5s" id="countdownNow"></div>
+                        <div class="count_down wow fadeInDown animated" data-wow-offset="120" data-wow-duration="1.5s"></div>
                         <!-- End: CountDown area -->
 
                         <div class="clearfix"></div>
@@ -1088,6 +1088,7 @@
                                 <li><a href="https://t.me/phpmaranhao" target="_blank"> <i class="fa telegram fa-telegram"></i> </a></li>
                                 <li><a href="https://pt-br.facebook.com/DevsWebMaranhao" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
                                 <li><a href="https://www.instagram.com/phpmaranhao" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                <li><a href="https://github.com/phpmaranhao" target="_blank"> <i class="fa github fa-github"></i> </a></li>
 
                                 <!--<li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>-->
                                 <!--<li><a href="#"> <i class="fa youtube fa-youtube"></i> </a></li>-->
