--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 
         <!-- GOOGLE FONTS -->
-        <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
 
         <!-- BOOTSTRAP CSS -->
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
