Remove carrousel dos palestrantes

--- a/index.html
+++ b/index.html
@@ -547,10 +547,10 @@
 
                         <h2>Palestrantes</h2><!-- Speakers Heading Goes Here -->
 
-                        <div id="slider" class="wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">
+                        <div class="row wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">
 
                             <!-- Speakers Slide images Goes Here -->
-                            <div class="item">
+                            <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
                                     <img src="images/speakers-img/weldys-santos.png" alt="">
                                     <div class="mask">
@@ -568,7 +568,7 @@
                                 <p>Project Manager, Creative Pack</p>
                             </div>
 
-                            <div class="item">
+                            <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
                                     <img src="images/speakers-img/jacson.jpeg" alt="">
                                     <div class="mask">
@@ -586,7 +586,7 @@
                                 <p>Acessor Técnico, Secretaria Adjunta de Transparência</p>
                             </div>
 
-                            <div class="item">
+                            <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
                                     <img src="images/speakers-img/willian-mano.jpg" alt="">
                                     <div class="mask">
@@ -602,7 +602,7 @@
                                 <p>Supervisor, UEMANET</p>
                             </div>
 
-                            <div class="item">
+                            <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
                                     <img src="images/speakers-img/ricardo-coelho.jpg" alt="">
                                     <div class="mask">
@@ -621,9 +621,9 @@
                             </div>
                         </div><!-- End: "slider" Area -->
 
-                        <div id="slider" class="wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">
+                        <div class="row wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">
                             <!-- Speakers Slide images Goes Here -->
-                            <div class="item">
+                            <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
                                     <img src="images/speakers-img/lucas-souza.jpg" alt="">
                                     <div class="mask">
@@ -641,7 +641,7 @@
                                 <p>Programador, UEMANET</p>
                             </div>
 
-                            <div class="item">
+                            <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
                                     <img src="images/speakers-img/romulo-martins.jpg" alt="">
                                     <div class="mask">
@@ -660,7 +660,7 @@
                                 <p>CTO and Co-founder, Workeduc</p>
                             </div>
 
-                            <div class="item">
+                            <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
                                     <img src="images/speakers-img/felipe-pimenta.jpg" alt="">
                                     <div class="mask">
