--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-5">
                                             <h3>A​ Arte​ Jedi de​ Construir um​ Framework​ PHP</h3>
-                                            <p>O​ significado​ de Framework​ e sua importância​ no​ mercado​ desenvolvimento​ atual.​ Iremos também,​ desenvolver​ em​ poucos​ minutos um​ Framework​ Full Stack baseado​ nos​ padrõesdo​ PHP-FIG,​ utilizando​ o Micro-Framework ​Silex.</p>
+                                            <p>Neste workshop​ iremos entender o significado​ de Framework​ e sua importância​ no​ mercado​ desenvolvimento​ atual.​ Iremos também,​ desenvolver​ em​ poucos​ minutos um​ Framework​ Full Stack baseado​ nos​ padrõesdo​ PHP-FIG,​ utilizando​ o Micro-Framework ​Silex.</p>
                                             <p>Materiais necessários: Notebook Pessoal</p>
                                         </div>
 
@@ -583,7 +583,7 @@
                                 <div class="clearfix"></div>
 
                                 <h3>Jacson Santos</h3>
-                                <p>Acessor Técnico, Secretaria Adjunta de Transparência</p>
+                                <p>Assessor Técnico, Secretaria Adjunta de Transparência</p>
                             </div>
 
                             <div class="item col-md-3 col-xs-6">
@@ -676,6 +676,24 @@
 
                                 <h3>Felipe Pimenta</h3>
                                 <p>Programador, UEMANET</p>
+                            </div>
+
+                            <div class="item col-md-3 col-xs-6">
+                                <div class="view view-first">
+                                    <img src="images/speakers-img/gabrielle-limach.jpg" alt="">
+                                    <div class="mask">
+                                        <ul class="nav">
+                                            <li><a href="#"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>
+                                            <li><a href="#"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="#"> <i class="fa github fa-github"></i> </a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+
+                                <h3>Gabrielle Limach</h3>
+                                <p>Programadora, UNDB</p>
                             </div>
 
                         </div><!-- End: "slider" Area -->
