adicionando ancora, adicionando links de inscricao

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <!-- Start: Button area -->
                             <div class="buy-tricket btn-scroll wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">
                                 <div class="btn-group">
-                                    <a href="#section-6" class="btn-fill btn-standard btn btn-cus">Fazer minha inscrição</a>
+                                    <a href="https://www.sympla.com.br/8-forum-de-profissionais-php-do-maranhao__207387" target="_blank" class="btn-fill btn-standard btn btn-cus">Fazer minha inscrição</a>
                                 </div>
                             </div>
                             <!-- End: Button area" -->
@@ -171,15 +171,15 @@
                         <div class="container-fluid">
                             <div class="row about-our-event-right-body">
                                 <div class="col-md-4 col-sm-4 col-xs-4 col-lg-4 background time">
-                                    <span class="counter style-all">08</span>
+                                    <span class="counter style-all">10</span>
                                     <span class="title">Palestrantes</span>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 col-lg-4 background time">
-                                    <span class="counter style-all">01</span>
+                                    <span class="counter style-all">02</span>
                                     <span class="title">Dinâmica de grupo</span>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 col-lg-4 background time">
-                                    <span class="counter style-all">02</span>
+                                    <span class="counter style-all">04</span>
                                     <span class="title">Workshops</span>
                                 </div>
                             </div>
@@ -226,8 +226,8 @@
                             <!-- Start: Button area -->
                             <div class="buy-tricket">
                                 <div class="btn-group btn-scroll">
-                                    <a href="#" class="btn-fill btn-standard btn btn-cus">Nossos palestrantes</a>
-                                    <a href="#" class="btn-border btn-standard btn btn-cus">Fazer minha inscrição</a>
+                                    <a href="#section-4" class="btn-fill btn-standard btn btn-cus">Nossos palestrantes</a>
+                                    <a href="https://www.sympla.com.br/8-forum-de-profissionais-php-do-maranhao__207387" target="_blank" class="btn-border btn-standard btn btn-cus">Fazer minha inscrição</a>
                                 </div>
                             </div>
                             <!-- End: Button area" -->
