adicionando novo palestrante, e informacoes de redes sociais

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <!-- Start: Button area -->
                             <div class="buy-tricket">
                                 <div class="btn-group btn-scroll">
-                                    <a href="#section-4" class="btn-fill btn-standard btn btn-cus">Nossos palestrantes</a>
+                                    <!--<a href="#section-4" class="btn-fill btn-standard btn btn-cus">Nossos palestrantes</a>-->
                                     <a href="https://www.sympla.com.br/8-forum-de-profissionais-php-do-maranhao__207387" target="_blank" class="btn-border btn-standard btn btn-cus">Fazer minha inscrição</a>
                                 </div>
                             </div>
@@ -234,7 +234,6 @@
                         </div>
                     </div>
                     <!-- End: About-Our-Event Right Area  -->
-
 
                 </div>
                 <!-- End: About Our Event Area  -->
@@ -550,40 +549,39 @@
                         <div class="row wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">
 
                             <!-- Speakers Slide images Goes Here -->
+
                             <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
-                                    <img src="images/speakers-img/weldys-santos.png" alt="">
+                                    <img src="images/speakers-img/gabrielle-limach.jpg" alt="">
                                     <div class="mask">
                                         <ul class="nav">
-                                            <li><a href="#"> <i class="fa facebook fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>
-                                            <li><a href="#"> <i class="fa instagram fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/gabi_lmm/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/gabrielle.lima.machado" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/gabilimach/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="clearfix"></div>
 
-                                <h3>Weldys Santos</h3>
-                                <p>Project Manager, Creative Pack</p>
+                                <h3>Gabrielle Limach</h3>
+                                <p>Programadora, UNDB</p>
                             </div>
 
                             <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
-                                    <img src="images/speakers-img/jacson.jpeg" alt="">
+                                    <img src="images/speakers-img/lanna-reis.jpg" alt="">
                                     <div class="mask">
                                         <ul class="nav">
-                                            <li><a href="#"> <i class="fa facebook fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>
-                                            <li><a href="#"> <i class="fa skype fa-skype"></i> </a></li>
-                                            <li><a href="#"> <i class="fa rss fa-rss "></i> </a></li>
+                                            <li><a href="https://www.instagram.com/lannareys/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/lanna.reis.988" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/lanna-reis-3bb745134/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="clearfix"></div>
 
-                                <h3>Jacson Santos</h3>
-                                <p>Assessor Técnico, Secretaria Adjunta de Transparência</p>
+                                <h3>Lanna Reis</h3>
+                                <p>CEO, Diikee</p>
                             </div>
 
                             <div class="item col-md-3 col-xs-6">
@@ -607,10 +605,10 @@
                                     <img src="images/speakers-img/ricardo-coelho.jpg" alt="">
                                     <div class="mask">
                                         <ul class="nav">
-                                            <li><a href="#"> <i class="fa facebook fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>
-                                            <li><a href="#"> <i class="fa skype fa-skype"></i> </a></li>
-                                            <li><a href="#"> <i class="fa rss fa-rss "></i> </a></li>
+                                            <li><a href="https://www.instagram.com/ramcoelho/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/ricardoamcoelho" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://github.com/ramcoelho" target="_blank"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/ramcoelho/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -619,19 +617,20 @@
                                 <h3>Ricado Coelho</h3>
                                 <p>CAO, Nexy</p>
                             </div>
+
                         </div><!-- End: "slider" Area -->
 
                         <div class="row wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">
-                            <!-- Speakers Slide images Goes Here -->
+
                             <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
                                     <img src="images/speakers-img/lucas-souza.jpg" alt="">
                                     <div class="mask">
                                         <ul class="nav">
-                                            <li><a href="#"> <i class="fa facebook fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>
-                                            <li><a href="#"> <i class="fa instagram fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/lucassouzavieira_/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/lucassouzavieira18" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://github.com/lucassouzavieira" target="_blank"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/lucassouzavieira/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -643,13 +642,12 @@
 
                             <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
-                                    <img src="images/speakers-img/romulo-martins.jpg" alt="">
+                                    <img src="images/speakers-img/romulo-martins.png" alt="">
                                     <div class="mask">
                                         <ul class="nav">
-                                            <li><a href="#"> <i class="fa facebook fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>
-                                            <li><a href="#"> <i class="fa skype fa-skype"></i> </a></li>
-                                            <li><a href="#"> <i class="fa rss fa-rss "></i> </a></li>
+                                            <li><a href="https://www.instagram.com/romulomfranca/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/romulo.martins.1044" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/romulomfranca/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
                                         </ul>
 
                                     </div>
@@ -665,10 +663,10 @@
                                     <img src="images/speakers-img/felipe-pimenta.jpg" alt="">
                                     <div class="mask">
                                         <ul class="nav">
-                                            <li><a href="#"> <i class="fa facebook fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>
-                                            <li><a href="#"> <i class="fa instagram fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/fhp1menta" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/fhp1menta" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://github.com/fhpimenta" target="_blank"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/felipe-pimenta-675184109/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -680,23 +678,45 @@
 
                             <div class="item col-md-3 col-xs-6">
                                 <div class="view view-first">
-                                    <img src="images/speakers-img/gabrielle-limach.jpg" alt="">
+                                    <img src="images/speakers-img/weldys-santos.png" alt="">
                                     <div class="mask">
                                         <ul class="nav">
-                                            <li><a href="#"> <i class="fa facebook fa-facebook"></i> </a></li>
-                                            <li><a href="#"> <i class="fa twitter fa-twitter"></i> </a></li>
-                                            <li><a href="#"> <i class="fa instagram fa-instagram"></i> </a></li>
-                                            <li><a href="#"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/weldyss/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/weldyss" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://github.com/weldyss" target="_blank"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/weldyss/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="clearfix"></div>
 
-                                <h3>Gabrielle Limach</h3>
-                                <p>Programadora, UNDB</p>
+                                <h3>Weldys Santos</h3>
+                                <p>Project Manager, Creative Pack</p>
                             </div>
 
                         </div><!-- End: "slider" Area -->
+
+                        <div class="row wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">
+
+                            <div class="item col-md-3 col-xs-6">
+                                <div class="view view-first">
+                                    <img src="images/speakers-img/jacson.jpeg" alt="">
+                                    <div class="mask">
+                                        <ul class="nav">
+                                            <li><a href="https://www.instagram.com/jacsonsantos_js/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/jacson.santos.7" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://github.com/jacsonsantos" target="_blank"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/jacsonsantossilva/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+
+                                <h3>Jacson Santos</h3>
+                                <p>Assessor Técnico, Secretaria Adjunta de Transparência</p>
+                            </div>
+
+                        </div>
 
                     </div>
                 </div><!-- Start: Speakers Body Area -->
