--- a/index.html
+++ b/index.html
@@ -723,205 +723,6 @@
             </div><!-- End:  "container"-->
         </section><!-- End: Speakers Area, "SECTION-4" -->
 
-
-
-        <!--TABELA DE PRECO-->
-        <!--<section class="pricing-tables" id="section-5"> &lt;!&ndash; Start: Pricing Table Area, "SECTION-5" &ndash;&gt;-->
-            <!--<div class="container">-->
-                <!--<div class="row pricing-tables-body">-->
-                    <!---->
-                    <!--&lt;!&ndash; Start: Pricing Table Left  &ndash;&gt;-->
-                    <!--<div class="pricing-tables-left col-xs-12 col-sm-8 col-md-8">-->
-                        <!--<div class="container-fluid">-->
-                            <!--<div class="row">-->
-                                <!--<div class="wow fadeInUp animated" data-wow-offset="120" data-wow-duration="1.5s">-->
-                                    <!--<h3>Just choose a package and join our conference to know about our community more, Its really enjoyable.</h3>-->
-                                <!--</div>-->
-
-                                <!--&lt;!&ndash; Nav tabs &ndash;&gt;-->
-                                <!--<ul class="scedule-main nav wow fadeIn animated" data-wow-offset="120" data-wow-duration="1.5s" role="tablist">-->
-                                    <!--<li role="presentation" class="btn-group col-xs-12 col-sm-12 col-md-4 active">-->
-                                        <!--<a class="btn-border btn-standard btn btn-cus" href="#pricing-table-1" aria-controls="pricing-table-1" role="tab" data-toggle="tab">Silver</a>-->
-                                    <!--</li>-->
-                                    <!--<li role="presentation" class="btn-group col-xs-12 col-sm-12 col-md-4">-->
-                                        <!--<a class="btn-border btn-standard btn btn-cus" href="#pricing-table-2" aria-controls="pricing-table-2" role="tab" data-toggle="tab">Gold</a>-->
-                                    <!--</li>-->
-                                    <!--<li role="presentation" class="btn-group col-xs-12 col-sm-12 col-md-4">-->
-                                        <!--<a class="btn-border btn-standard btn btn-cus" href="#pricing-table-3" aria-controls="pricing-table-3" role="tab" data-toggle="tab">Platinum</a>-->
-                                    <!--</li>-->
-                                <!--</ul>-->
-                                <!--<div class="wow fadeInDown animated" data-wow-offset="120" data-wow-duration="1.5s">-->
-                                    <!--<p class="hidden-xs hidden-sm">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna  aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorp eu feugiat nulla facilisis at vero eros et accumsan et iusto odior tempor cum soluta nobis eleifend option congue nihil imperdiet doming.</p>-->
-
-                                    <!--<p class="hidden-xs hidden-sm">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut  aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor inpi non habent clarita tem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lect</p>-->
-                                <!--</div>-->
-
-                            <!--</div>-->
-                        <!--</div>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash; End: Pricing Table Left  &ndash;&gt;-->
-
-                    <!--&lt;!&ndash; Start: Pricing Table Right  &ndash;&gt;-->
-                    <!--&lt;!&ndash; Pricing Table - 1 &ndash;&gt;-->
-                    <!--<div class="tab-content pricing-tables-right col-xs-12 col-sm-4 col-md-4">-->
-                        <!--<div role="tabpanel" class="tab-pane active" id="pricing-table-1">-->
-
-                                <!--<div class="wow fadeInDown animated" data-wow-delay="0.5s">-->
-                                    <!--<div class="table-single">-->
-
-                                        <!--<p>-->
-                                            <!--<span class="currency">$</span>-->
-                                            <!--<span class="rate">100</span> <br/> -->
-                                            <!--<span class="period">Silver</span>-->
-                                        <!--</p>-->
-
-                                        <!--<ul>-->
-                                            <!--<li>Seat On The Row</li>-->
-                                            <!--<li>Coffee With Spon Sugar</li>-->
-                                            <!--<li>Colorful Certificate</li>-->
-                                            <!--<li>Chicken Grill With Nann Rooti</li>-->
-                                            <!--<li>Business Class Flight Ticket</li>-->
-                                            <!--<li>Startup Review</li>-->
-                                        <!--</ul>-->
-
-                                        <!--<div class="btn-group btn-scroll">-->
-                                            <!--<a href="#section-6" class="btn-fill btn-standard btn btn-cus">Register Now</a>-->
-                                        <!--</div>-->
-
-                                    <!--</div> &lt;!&ndash; End: .table-single &ndash;&gt;-->
-                                <!--</div> &lt;!&ndash;  &ndash;&gt;-->
-
-                        <!--</div>-->
-
-                        <!--&lt;!&ndash; Pricing Table - 2 &ndash;&gt;-->
-                        <!--<div class="tab-pane" id="pricing-table-2">-->
-
-                                <!--<div class="wow fadeInDown animated" data-wow-delay="0.5s">-->
-                                    <!--<div class="table-single">-->
-        <!---->
-                                        <!--<p>-->
-                                            <!--<span class="currency">$</span>-->
-                                            <!--<span class="rate">200</span> <br/> -->
-                                            <!--<span class="period">Silver</span>-->
-                                        <!--</p>-->
-                                        <!--<ul>-->
-                                            <!--<li>Seat On The Row</li>-->
-                                            <!--<li>Coffee With Spon Sugar</li>-->
-                                            <!--<li>Colorful Certificate</li>-->
-                                            <!--<li>Chicken Grill With Nann Rooti</li>-->
-                                            <!--<li>Business Class Flight Ticket</li>-->
-                                            <!--<li>Startup Review</li>-->
-                                        <!--</ul>-->
-
-                                        <!--<div class="btn-group btn-scroll">-->
-                                            <!--<a href="#section-6" class="btn-fill btn-standard btn btn-cus">Register Now</a>-->
-                                        <!--</div>-->
-
-                                    <!--</div> &lt;!&ndash; End: .table-single &ndash;&gt;-->
-                                <!--</div> &lt;!&ndash;  &ndash;&gt;-->
-
-                        <!--</div>-->
-
-                        <!--&lt;!&ndash; Pricing Table - 3 &ndash;&gt;-->
-                        <!--<div class="tab-pane" id="pricing-table-3">-->
-                        <!---->
-                                <!--<div class="wow fadeInDown animated" data-wow-delay="0.5s">-->
-                                    <!--<div class="table-single">-->
-                                        <!--<p>-->
-                                            <!--<span class="currency">$</span>-->
-                                            <!--<span class="rate">300</span> <br/> -->
-                                            <!--<span class="period">Silver</span>-->
-                                        <!--</p>-->
-
-                                        <!--<ul>-->
-                                            <!--<li>Seat On The Row</li>-->
-                                            <!--<li>Coffee With Spon Sugar</li>-->
-                                            <!--<li>Colorful Certificate</li>-->
-                                            <!--<li>Chicken Grill With Nann Rooti</li>-->
-                                            <!--<li>Business Class Flight Ticket</li>-->
-                                            <!--<li>Startup Review</li>-->
-                                        <!--</ul>-->
-
-                                        <!--<div class="btn-group btn-scroll">-->
-                                            <!--<a href="#section-6" class="btn-fill btn-standard btn btn-cus">Register Now</a>-->
-                                        <!--</div>-->
-
-                                    <!--</div> &lt;!&ndash; End: .table-single &ndash;&gt;-->
-                                <!--</div> &lt;!&ndash;  &ndash;&gt;-->
-
-                        <!--</div>-->
-
-                    <!--</div>&lt;!&ndash; Start: Pricing Table Right  &ndash;&gt;-->
-                <!--</div>&lt;!&ndash; End: .pricing-table-body  &ndash;&gt;-->
-            <!--</div> &lt;!&ndash; End: .container  &ndash;&gt;-->
-        <!--</section> &lt;!&ndash; End: .Pricing .Table Area, "#SECTION-5" &ndash;&gt;-->
-
-
-
-
-        <!--<section class="register-background register" id="section-6"> &lt;!&ndash; Start: Register Area, "#SECTION-6" &ndash;&gt;-->
-            <!--<div class="overlay-color">-->
-                <!--<div class="container">-->
-                    <!--<div class="row register-body">-->
-                        <!---->
-                        <!--&lt;!&ndash; Register Area Tetle Goes Here  &ndash;&gt;-->
-                        <!--<div class="col-sm-12 wow fadeInDown animated" data-wow-offset="120" data-wow-duration="1.5s">-->
-                            <!--<div class="container-fluid">-->
-                                <!--<div class="row">-->
-                                    <!--<div class="col-md-offset-1 col-md-10">-->
-                                        <!--<h3>Register Here to Join abut every single things heppening on our event and know more about this event.</h3>-->
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</div>-->
-                        <!--</div>-->
-
-                        <!--&lt;!&ndash; Register Form Goes Here  &ndash;&gt;-->
-                        <!--<div class="col-sm-12 wow fadeInDown animated" data-wow-offset="120" data-wow-duration="1.5s">-->
-
-                            <!--<form id="register-form" method="post" class="form input-group">-->
-                                <!--<div class="container-fluid">-->
-                                    <!--<div class="row">-->
-
-                                        <!--<div class="col-md-2 col-sm-6">-->
-                                            <!--<input name="name" id="name" class="form-cus form-control" type="text" placeholder="Name" required>-->
-                                        <!--</div>-->
-
-                                        <!--<div class="col-md-3 col-sm-6">-->
-                                            <!--<input name="email" id="email" class="form-cus form-control" type="email" placeholder="Email" required>-->
-                                        <!--</div>-->
-
-                                        <!--<div class="col-md-2 col-sm-6">-->
-                                            <!--<input name="telephone" class="form-cus form-control" id="telephone" type="tel" placeholder="Telephone">-->
-                                        <!--</div>-->
-
-                                        <!--<div class="clearfix visible-xs"></div>-->
-
-                                        <!--<div class="col-md-2 col-sm-6 dropDown">-->
-                                            <!--<select name="ticket" id="ticket" class="form-cus form-control">-->
-                                                <!--<option value="Silver">Silver</option>-->
-                                                <!--<option value="Gold">Gold</option>-->
-                                                <!--<option value="Platinum">Platinum</option>-->
-                                            <!--</select>-->
-                                        <!--</div>-->
-
-                                        <!--<div class="col-md-3 col-sm-12">-->
-                                            <!--<input type="submit" class="btn-fill btn-standard btn btn-cus" value="Register" name="submit">-->
-                                        <!--</div>-->
-
-                                    <!--</div>-->
-                                <!--</div>-->
-                            <!--</form>-->
-
-                        <!--</div>&lt;!&ndash; End: .col-sm-12  &ndash;&gt;-->
-                        <!---->
-                    <!--</div>&lt;!&ndash; End: .register-body &ndash;&gt;-->
-                <!--</div>&lt;!&ndash; End: .container &ndash;&gt;-->
-            <!--</div> &lt;!&ndash; End: .overlay-color &ndash;&gt;-->
-        <!--</section> &lt;!&ndash; End: Register Area, "#SECTION-6" &ndash;&gt;-->
-
-
-
-
         <!--PATROCINADORES-->
         <!--<section class="sponsore" id="section-7" >&lt;!&ndash; Start: Sponsore Area, "#SECTION-7" &ndash;&gt;-->
             <!--<div class="container">-->
@@ -959,16 +760,9 @@
                         <!--</div>-->
                     <!--</div>&lt;!&ndash; End: Images Area &ndash;&gt;-->
 
-
-
                 <!--</div>&lt;!&ndash; Start: Sponsore Body Area &ndash;&gt;-->
             <!--</div>&lt;!&ndash; End: .container  &ndash;&gt;-->
         <!--</section>&lt;!&ndash; End: Sponsore Area, "#SECTION-7" &ndash;&gt;-->
-
-
-
-
-
 
         <section class="collapse-area" id="section-8"> <!-- Start: Collapse Area, "#SECTION-8" -->
             <div class="container">
@@ -1079,12 +873,9 @@
                     </div>
                     <!-- End: Collapse Area Right  -->
 
-
                 </div> <!-- End: .row  -->
             </div> <!-- End: .container  -->
         </section> <!-- End: Collapse Area, "#SECTION-8" -->
-
-
 
         <!--<section class="scedule testimonial" id="section-9"> &lt;!&ndash; End: Testimonial Area, "#SECTION-9" &ndash;&gt;-->
             <!--<div class="container">-->
@@ -1094,7 +885,6 @@
 
                         <!--<div class="dropdown">-->
                             <!--<span id="btn-testimonial" data-id="#nav-ul-testimonial" class="btn-scedule-css hidden-md hidden-lg label"></span>-->
-
 
                             <!--&lt;!&ndash; Nav tabs &ndash;&gt;-->
                             <!--<ul class="nav nav-cus col-md-4" role="tablist"  id="nav-ul-testimonial">-->
@@ -1167,8 +957,6 @@
             <!--</div> &lt;!&ndash; End: .container  &ndash;&gt;-->
         <!--</section> &lt;!&ndash; End: Testimonial Area, "#SECTION-9" &ndash;&gt;-->
 
-
-
         <section class="twitter-background twitter-posts" id="section-10"> <!-- End: Twitter Posts Area, "#SECTION-10" -->
             <div class="fix overlay-color">
                 <div class="container">
@@ -1220,7 +1008,6 @@
             </div> <!-- End: .overlay-color  -->
         </section> <!-- End: Twitter Posts Area, "#SECTION-10" -->
 
-
         <section class="contact-us" id="section-11"> <!-- Start: Contact Us Area, "#SECTION-11" -->
             <div class="container">
                 <div class="row contact-us-body">
@@ -1251,9 +1038,7 @@
                     <!-- Start: Google Map Area, "Part-1-Up" "map" -->
                     <!--<div class="contact-us-right col-md-offset-1 col-md-7 fadeInLeft animated" data-wow-offset="120" data-wow-duration="1.5s">-->
                         <!--<div class="row">-->
-                            <!--<div class="map" id="map">-->
-
-                            <!--</div>-->
+                            <!--<div class="map" id="map"></div>-->
                         <!--</div>-->
                     <!--</div>-->
                     <div class="contact-us-right col-md-offset-1 col-md-7 fadeInLeft animated" data-wow-offset="120" data-wow-duration="1.5s">
@@ -1308,5 +1093,4 @@
         <script src="js/custom-scripts.js"></script>
 
     </body>
-
 </html>
