--- a/index.html
+++ b/index.html
@@ -266,9 +266,6 @@
                                 <li role="presentation" class="btn-group col-xs-12 col-sm-12 col-md-6 active">
                                     <a class="btn-border btn-standard btn btn-cus" href="#scedule-1" aria-controls="scedule-1" role="tab" data-toggle="tab">Primeiro dia</a>
                                 </li>
-                                <!--<li role="presentation" class="btn-group col-xs-12 col-sm-12 col-md-4">-->
-                                    <!--<a class="btn-border btn-standard btn btn-cus" href="#scedule-2" aria-controls="scedule-2" role="tab" data-toggle="tab">Segundo dia</a>-->
-                                <!--</li>-->
                                 <li role="presentation" class="btn-group col-xs-12 col-sm-12 col-md-6">
                                     <a class="btn-border btn-standard btn btn-cus" href="#scedule-3" aria-controls="scedule-3" role="tab" data-toggle="tab">Segundo dia</a>
                                 </li>
@@ -297,49 +294,56 @@
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-2" aria-controls="scedule-sub-2" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Abertura</span>
-                                                    <span class="nav-time">08:30</span>
+                                                    <span class="nav-time">Atmos Maciel - 08:30</span>
                                                 </a>
                                             </li>
 
-                                            <!--<li role="presentation" class="">-->
-                                                <!--<a href="#scedule-sub-3" aria-controls="scedule-sub-3" role="tab" data-toggle="tab">-->
-                                                    <!--<span class="nav-header">Palestra</span>-->
-                                                    <!--<span class="nav-time">Evaldo Barbosa: 09:00 - 09:40</span>-->
-                                                <!--</a>-->
-                                            <!--</li>-->
-
-                                            <!--<li role="presentation" class="">-->
-                                                <!--<a href="#scedule-sub-4" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">-->
-                                                    <!--<span class="nav-header">Palestra</span>-->
-                                                    <!--<span class="nav-time">Felipe Pimenta: 09:50 - 10:30</span>-->
-                                                <!--</a>-->
-                                            <!--</li>-->
+                                            <li role="presentation" class="">
+                                                <a href="#scedule-sub-3" aria-controls="scedule-sub-3" role="tab" data-toggle="tab">
+                                                    <span class="nav-header">Não definido</span>
+                                                    <span class="nav-time">Evaldo Barbosa: 09:00 - 09:40</span>
+                                                </a>
+                                            </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-5" aria-controls="scedule-sub-5" role="tab" data-toggle="tab">
+                                                <a href="#scedule-sub-4" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
+                                                    <span class="nav-header">Não definido</span>
+                                                    <span class="nav-time">Felipe Pimenta: 09:50 - 10:30</span>
+                                                </a>
+                                            </li>
+
+                                            <li role="presentation" class="">
+                                                <a href="#scedule-sub-5" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
+                                                    <span class="nav-header">Chatbots 101</span>
+                                                    <span class="nav-time">Lucas Souza: 10:40 - 11:30</span>
+                                                </a>
+                                            </li>
+
+                                            <li role="presentation" class="">
+                                                <a href="#scedule-sub-6" aria-controls="scedule-sub-5" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Workshop: ​ Arte​ Jedi de​ Construir um​ Framework​ PHP</span>
                                                     <span class="nav-time">Jacson Santos: 09:00 - 11:00</span>
                                                 </a>
                                             </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-6" aria-controls="scedule-sub-6" role="tab" data-toggle="tab">
+                                                <a href="#scedule-sub-7" aria-controls="scedule-sub-6" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Workshop: Palestrei</span>
                                                     <span class="nav-time">10:00 - 12:00</span>
                                                 </a>
                                             </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-7" aria-controls="scedule-sub-7" role="tab" data-toggle="tab">
+                                                <a href="#scedule-sub-8" aria-controls="scedule-sub-7" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Workshop: Introdução à modelagem de bancos NoSQL - ArangoDB</span>
                                                     <span class="nav-time">Lucas Souza: 13:00 - 15:00</span>
                                                 </a>
                                             </li>
 
                                             <li role="presentation" class="">
-                                                <a href="#scedule-sub-8" aria-controls="scedule-sub-8" role="tab" data-toggle="tab">
+                                                <a href="#scedule-sub-9" aria-controls="scedule-sub-8" role="tab" data-toggle="tab">
                                                     <span class="nav-header">Workshop: Conhecendo o Design Thinking e potencializando ideias</span>
-                                                    <span class="nav-time">Lanna Reis: 13:00 - 15:00</span>
+                                                    <span class="nav-time">Lanna Reis: 15:00 - 17:00</span>
                                                 </a>
                                             </li>
 
@@ -355,44 +359,47 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-2">
-                                            <h3>Cerimonia de Abertura</h3>
-                                            <p>Momento de falar sobre os fórum, nosso anseios e o porque de estar-mos ali.</p>
+                                            <h3>Cerimônia de Abertura</h3>
+                                            <p>Momento de falar sobre os fórum, nosso anseios e o porque de estarmos ali.</p>
                                         </div>
 
-                                        <!--<div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-3">-->
-                                            <!--<h3>Palestra</h3>-->
-                                            <!--<p>Lorem ipsum event dolor sit amet, landing page consectetuer seminar elit, sed event nonummy nibh euismod community ut laoreet dolore magna convention erat volutpat. Conference wisi enim ad minim webinar, quis nostrud meetup tation ullamcorp eu feugiat nulla exhibition vero eros et landing page et iusto odior expo cum summit eleifend event congue nihil imperdiet meeting.</p>-->
-                                            <!--<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut  aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor inpi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lect</p>-->
-                                        <!--</div>-->
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-3">
+                                            <h3>Não definido até o momento. :(</h3>
+                                            <p>Não definido até o momento. :(</p>
+                                        </div>
 
-                                        <!--<div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-4">-->
-                                            <!--<h3>It is a long established fact that a reader will be distracted by the readable contents on the webpages.</h3>-->
-                                            <!--<p>Lorem ipsum event dolor sit amet, landing page consectetuer seminar elit, sed event nonummy nibh euismod community ut laoreet dolore magna convention erat volutpat. Conference wisi enim ad minim webinar, quis nostrud meetup tation ullamcorp eu feugiat nulla exhibition vero eros et landing page et iusto odior expo cum summit eleifend event congue nihil imperdiet meeting.</p>-->
-                                            <!--<p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut  aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor inpi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lect</p>-->
-                                        <!--</div>-->
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-4">
+                                            <h3>Não definido até o momento. :(</h3>
+                                            <p>Não definido até o momento. :(</p>
+                                        </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-5">
+                                            <h3>Chatbots 101</h3>
+                                            <p>Uma introdução bem descontraída ao mundo do chatbots e como eles podem ajudar a resolver alguns de seus problemas.</p>
+                                        </div>
+
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-6">
                                             <h3>A​ Arte​ Jedi de​ Construir um​ Framework​ PHP</h3>
                                             <p>Neste workshop​ iremos entender o significado​ de Framework​ e sua importância​ no​ mercado​ desenvolvimento​ atual.​ Iremos também,​ desenvolver​ em​ poucos​ minutos um​ Framework​ Full Stack baseado​ nos​ padrõesdo​ PHP-FIG,​ utilizando​ o Micro-Framework ​Silex.</p>
                                             <p>Materiais necessários: Notebook Pessoal</p>
                                         </div>
 
-                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-6">
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-7">
                                             <h3>Palestrei</h3>
-                                            <p>Workshop for Speakers</p>
+                                            <p>Workshop for Speakers.</p>
                                             <p>Tem vontade de se tornar um palestrante e de aprender os caminhos das pedras da arte de palestrar? Então vem pro Palestrei. :)</p>
                                         </div>
 
-                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-7">
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-8">
                                             <h3>Introdução à modelagem de bancos NoSQL - ArangoDB</h3>
                                             <p>Neste workshop serão apresentados os conceitos fundamentais da modelagem de bancos de dados NoSQL, especialmente os bancos de dados não relacionais que suportam vários modelos como chave-valor, documentos e grafos.</p>
                                             <p>Materiais necessários: Notebook Pessoal</p>
                                         </div>
 
-                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-8">
+                                        <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-9">
                                             <h3>Conhecendo o Design Thinking e potencializando ideias</h3>
                                             <p>Neste workshop, usaremos a abordagem de inovação Design Thinking. Conheceremos seus valores, pilares e etapas e de forma prática descobriremos como podemos resolver problemas, testar ideias e entrega-las com valor.</p>
-                                            <p>Materiais necessários: Reguas, pincéis e outros itens de papelaria</p>
+                                            <p>Materiais necessários: reguas, pincéis de quadro branco, post its, papel e caneta. :)</p>
                                         </div>
 
                                     </div>
