--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-3" aria-controls="scedule-sub-3" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Não definido</span>
+                                                    <span class="nav-header">Empreendedorismo e Desenvolvimento</span>
                                                     <span class="nav-time">Evaldo Barbosa: 09:00 - 09:40</span>
                                                 </a>
                                             </li>
@@ -364,8 +364,9 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-3">
-                                            <h3>Não definido até o momento. :(</h3>
-                                            <p>Não definido até o momento. :(</p>
+                                            <h3>Empreendedorismo e Desenvolvimento</h3>
+                                            <p>Aprendendo a empreender nos erros dos outros.</p>
+                                            <p>Nessa palestra mostrarei ao programador (ou outro profissional) que empreender é muito mais que ser "o frente" do negócio. Que o intraempreendedorismo é uma forma de executar o seu trabalho com paixão e ainda aprender com os erros do negócio para, futuramente, empreender em sua própria ideia. Que executar seu trabalho com um propósito claro (a estratégia) é a melhor forma de dar resultados e aprender a olhar o horizonte sem medo.</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-4">
