--- a/index.html
+++ b/index.html
@@ -728,6 +728,24 @@
                                 <p>Assessor Técnico, Secretaria Adjunta de Transparência</p>
                             </div>
 
+                            <div class="item col-md-3 col-xs-6">
+                                <div class="view view-first">
+                                    <img src="images/speakers-img/evaldo-barbosa.jpg" alt="">
+                                    <div class="mask">
+                                        <ul class="nav">
+                                            <li><a href="https://www.instagram.com/mrlucky.com.br/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.facebook.com/evaldo.barbosa.902" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://github.com/evaldobarbosa" target="_blank"> <i class="fa github fa-github"></i> </a></li>
+                                            <li><a href="https://www.linkedin.com/in/evaldobarbosa" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="clearfix"></div>
+
+                                <h3>Evaldo Barbosa</h3>
+                                <p>CEO, Mr Lucky; Tech Leader, SEATI</p>
+                            </div>
+
                         </div>
 
                     </div>
