--- a/index.html
+++ b/index.html
@@ -1117,7 +1117,7 @@
         <script src="js/jquery.countdown.js"></script>
         <script src="js/fancySelect.js"></script>
         <script src="js/smoothscroll.js"></script>
-        <script src="js/maps.js"></script>
+        <!--<script src="js/maps.js"></script>-->
 
         <script src="js/navbar-custom.js"></script>
         <script src="js/custom-scripts.js"></script>
