--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-3" aria-controls="scedule-sub-3" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Empreendedorismo e Desenvolvimento</span>
+                                                    <span class="nav-header">Aprendendo a empreender nos erros dos outros</span>
                                                     <span class="nav-time">Evaldo Barbosa: 09:00 - 09:40</span>
                                                 </a>
                                             </li>
@@ -364,8 +364,8 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-3">
-                                            <h3>Empreendedorismo e Desenvolvimento</h3>
-                                            <p>Aprendendo a empreender nos erros dos outros.</p>
+                                            <h3>Aprendendo a empreender nos erros dos outros</h3>
+                                            <p>Empreendedorismo e Desenvolvimento.</p>
                                             <p>Nessa palestra mostrarei ao programador (ou outro profissional) que empreender é muito mais que ser "o frente" do negócio. Que o intraempreendedorismo é uma forma de executar o seu trabalho com paixão e ainda aprender com os erros do negócio para, futuramente, empreender em sua própria ideia. Que executar seu trabalho com um propósito claro (a estratégia) é a melhor forma de dar resultados e aprender a olhar o horizonte sem medo.</p>
                                         </div>
 
@@ -569,6 +569,7 @@
                                         <ul class="nav">
                                             <li><a href="https://www.instagram.com/gabi_lmm/" target="_blank"> <i class="fa instagram fa-instagram"></i> </a></li>
                                             <li><a href="https://www.facebook.com/gabrielle.lima.machado" target="_blank"> <i class="fa facebook fa-facebook"></i> </a></li>
+                                            <li><a href="https://github.com/GabrielleLimach" target="_blank"> <i class="fa github fa-github"></i> </a></li>
                                             <li><a href="https://www.linkedin.com/in/gabilimach/" target="_blank"> <i class="fa linkedin fa-linkedin"></i> </a></li>
                                         </ul>
                                     </div>
