removendo scrolltop e js

--- a/index.html
+++ b/index.html
@@ -1093,10 +1093,10 @@
                         <img src="images/frase-dedicatoria.png" alt="">
                     </div>
 
-                    <!--  Scroll Top  -->
-                    <div class="top-buttom col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                         <a href="#header" class="btn-standard btn btn-top"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a>
-                    </div>
+                    <!--&lt;!&ndash;  Scroll Top  &ndash;&gt;-->
+                    <!--<div class="top-buttom col-lg-4 col-md-4 col-sm-4 col-xs-4">-->
+                         <!--<a href="#header" class="btn-standard btn btn-top"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span></a>-->
+                    <!--</div>-->
 
                 </div><!-- End: .row .footer-body .btn-scroll  -->
             </div> <!-- End: .container  -->
@@ -1117,7 +1117,7 @@
         <script src="js/jquery.ajaxchimp.min.js"></script>
         <script src="js/jquery.countdown.js"></script>
         <script src="js/fancySelect.js"></script>
-        <script src="js/smoothscroll.js"></script>
+        <!--<script src="js/smoothscroll.js"></script>-->
         <!--<script src="js/maps.js"></script>-->
 
         <script src="js/navbar-custom.js"></script>
