adicionando informações de Nanderson Castro

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-12" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Não definido</span>
+                                                    <span class="nav-header">Symfony 4 - E agora?!</span>
                                                     <span class="nav-time">Nanderson Castro: 10:40 - 11:30</span>
                                                 </a>
                                             </li>
@@ -506,8 +506,8 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-12">
-                                            <h3>Não definido até o momento. :(</h3>
-                                            <p>Não definido até o momento. :(</p>
+                                            <h3>Symfony 4 - E agora?!</h3>
+                                            <p>Conheceremos todas as novidades trazidas com a nova versão desse fullstack framework que é o Symfony. Veremos como essas mudanças impactam na componentização de nossas aplicações PHP.</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-13">
