correcao de codigo

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <link rel="stylesheet" href="css/owl.transitions.css">
 
         <!-- CSS3 ANIMATE CSS -->
-        <!--<link rel="stylesheet" href="css/animate.css">-->tele
+        <!--<link rel="stylesheet" href="css/animate.css">-->
 
         <!--  DROPDOWN CSS  -->
         <link rel="stylesheet" href="css/fancySelect.css" />
