atualizando perguntas frequentes.

--- a/index.html
+++ b/index.html
@@ -910,7 +910,7 @@
 
                                         <!-- Tab-4 Detail Goes Here  -->
                                         <div class="panel-body">
-                                            Sim. O Fórum emite certificado online para cada inscrito de 12 horas. 4 horas por dia de evento.
+                                            Sim. O Fórum emite certificado online para cada inscrito de 8 horas. 4 horas por dia de evento. No caso dos workshops cada inscrito que participar receberá certificado online da quantidade de horas do workshop.
                                         </div>
 
                                     </div>
