atualizando cargo de Nanderson castro

--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                                 <div class="clearfix"></div>
 
                                 <h3>Nanderson Castro</h3>
-                                <p>CEO, Code Experts Learning</p>
+                                <p>Professor, Code Experts Learning</p>
                             </div>
 
                         </div>
