adicionando informacoes de Ricardo Coelho

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-17" aria-controls="scedule-sub-9" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Não definido</span>
+                                                    <span class="nav-header">Implementando autenticação de dois fatores em qualquer aplicação</span>
                                                     <span class="nav-time">Ricardo Coelho: 16:30 - 17:10</span>
                                                 </a>
                                             </li>
@@ -531,8 +531,9 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-17">
-                                            <h3>Não definido até o momento. :(</h3>
-                                            <p>Não definido até o momento. :(</p>
+                                            <h3>Implementando autenticação de dois fatores em qualquer aplicação</h3>
+                                            <p>Todos temos conhecidos cujas senhas foram expostas. Conhece alguém? São frequentes os relatos de invasão de servidores, uso de engenharia social, vazamentos de senhas por hackers ou descuido com a proteção das senhas. Veremos como nos proteger usando autenticação de dois fatores em nossos sistemas.</p>
+                                            <p>Sabemos que a autenticação de dois fatores é uma grande aliada dos nossos usuários, mas mostraremos porque os maiores beneficiados são o desenvolvedor e a empresa que detém o software. Mais do que isto, veremos como implementar a autenticação de dois fatores em um sistema Web utilizando PHP. Nossa solução poderá ser usada com qualquer autenticador de uso comum, como Google Authenticator, Authy e similares, bem como em uma implementação de cliente próprio, se você preferir.</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-18">
