Atualizando dados da palestra de Felipe Pimenta

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
                                             <li role="presentation" class="">
                                                 <a href="#scedule-sub-4" aria-controls="scedule-sub-4" role="tab" data-toggle="tab">
-                                                    <span class="nav-header">Não definido</span>
+                                                    <span class="nav-header">Insight Data Science</span>
                                                     <span class="nav-time">Felipe Pimenta: 09:50 - 10:30</span>
                                                 </a>
                                             </li>
@@ -363,8 +363,8 @@
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-4">
-                                            <h3>Não definido até o momento. :(</h3>
-                                            <p>Não definido até o momento. :(</p>
+                                            <h3>Insight Data Science</h3>
+                                            <p>Você já deve ter lido ou ouvido falar sobre "Data Science", e não sabe o que é? Vamos juntos conhecer e aprender sobre a "Ciência dos Dados", onde e como podemos aplicá-la, e o por quê dessa área tem crescido tanto, tornado-se uma necessidade para a resolução de problemas e situações da vida cotidiana atual.</p>
                                         </div>
 
                                         <div role="tabpanel" class="tab-pane wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s" id="scedule-sub-5">
